Added QR code support

--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
     <title>Welcome to the passport form</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <script type="text/javascript" src="/lib/jquery.js"></script>
+    <script type="text/javascript" src="/lib/qrcode.js"></script>
     <script type="text/javascript" src="/lib/primus.js"></script>
     <script type="text/javascript" src="/javascripts/index.js"></script>
   </head>
